[gd_scene load_steps=19 format=3 uid="uid://ck2tmtx5clibg"]

[ext_resource type="Script" path="res://Scripts/Knight/Troops/knigth_archer_blue.gd" id="1_orub8"]
[ext_resource type="Texture2D" uid="uid://bok8p2ooe82k5" path="res://icon.svg" id="1_prcmg"]
[ext_resource type="Texture2D" uid="uid://d1w57dt7vdrtw" path="res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Blue/Archer_Blue.png" id="2_fj21m"]
[ext_resource type="Texture2D" uid="uid://cdturbcgk57ww" path="res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Dead/Dead.png" id="3_0q3vk"]
[ext_resource type="Texture2D" uid="uid://dkd2hc6588f4e" path="res://Assets/Tiny Swords (Update 010)/GUI/ArmySelected.png" id="4_2w0ky"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0nlwt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qwcwn"]
radius = 0.01

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xskkx"]
radius = 22.0
height = 64.0

[sub_resource type="Animation" id="Animation_7ubnq"]
resource_name = "detected"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DetectedArea/CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.01, 250.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gbnxu"]
_data = {
"detected": SubResource("Animation_7ubnq")
}

[sub_resource type="Animation" id="Animation_hfusb"]
resource_name = "AttackDown"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcherSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55]
}

[sub_resource type="Animation" id="Animation_ac26e"]
resource_name = "AttackLeft"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcherSprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArcherSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [31, 32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_twkj0"]
resource_name = "AttackRight"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcherSprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArcherSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [31, 32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_460qf"]
resource_name = "AttackUp"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcherSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_lltcl"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcherSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_unw3y"]
resource_name = "RunLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcherSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArcherSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0xbi0"]
resource_name = "RunRight"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcherSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArcherSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b4bri"]
_data = {
"AttackDown": SubResource("Animation_hfusb"),
"AttackLeft": SubResource("Animation_ac26e"),
"AttackRight": SubResource("Animation_twkj0"),
"AttackUp": SubResource("Animation_460qf"),
"Idle": SubResource("Animation_lltcl"),
"RunLeft": SubResource("Animation_unw3y"),
"RunRight": SubResource("Animation_0xbi0")
}

[node name="KnigthArcherBlue" type="CharacterBody2D"]
script = ExtResource("1_orub8")

[node name="SelectedTouched" type="TouchScreenButton" parent="."]
self_modulate = Color(1, 1, 1, 0.00392157)
position = Vector2(-30, -36)
scale = Vector2(0.453125, 0.523438)
texture_normal = ExtResource("1_prcmg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_0nlwt")

[node name="DetectedArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectedArea"]
shape = SubResource("CircleShape2D_qwcwn")

[node name="ArcherArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArcherArea"]
shape = SubResource("CapsuleShape2D_xskkx")

[node name="AttackTimer" type="Timer" parent="."]

[node name="ToolAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gbnxu")
}
autoplay = "detected"

[node name="VisualAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b4bri")
}
autoplay = "Idle"

[node name="ExtraAnimation" type="AnimationPlayer" parent="."]

[node name="ArcherSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_fj21m")
hframes = 8
vframes = 7
frame = 8

[node name="ExtraSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_0q3vk")
hframes = 7
vframes = 2

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="SelectedSprite" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0, 0, 1, 1)
position = Vector2(0, -56)
scale = Vector2(2, 2)
texture = ExtResource("4_2w0ky")

[connection signal="pressed" from="SelectedTouched" to="." method="_on_selected_touched_pressed"]
[connection signal="released" from="SelectedTouched" to="." method="_on_selected_touched_released"]
